# fabric_dlt_pipeline

./: .gitignore  load_and_create_shortcut.py  pyproject.toml
.github/workflows/: deploy.yml
